<resources>
    <string name="app_name">Мое первое приложение</string>
    <string name="mainText">Что то не нашли ?</string>
    <string name="mainButton">Переход на вебвью </string>
    <string name="Title">Title</string>
    <string name="title">Title</string>
    <string name="text_notes">Text notes</string>
    <string name="date">Date</string>
    <string name="enter_text">Enter text...</string>
</resources>