<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".NotesTakerActivity">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_notes"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="match_parent">

            <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:id="@+id/image_save"
                    android:src="@drawable/ic_save"
                    android:background="@android:color/transparent">

            </ImageView>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/edit_text_title"
              android:hint="@string/title"
              android:textColorHint="@color/white"
              android:padding="8dp"
              android:textStyle="bold"
              android:textSize="8sp"
              android:textColor="@color/white"
              android:singleLine="true"
              tools:ignore="SmallSp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/edit_text_notes"
              android:hint="@string/enter_text"
              android:textColorHint="@color/white"
              android:padding="8dp"
              android:textStyle="bold"
              android:textSize="18sp"
              android:textColor="@color/white"
    />

</LinearLayout>