<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/notes_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#93D38B"
        app:layout_marginBaseline="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4D6D6">
        <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
        />
        <ImageView
                android:id="@+id/image_pin"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
        />
    </RelativeLayout>
        <TextView
                android:id="@+id/text_view_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="normal"
                android:padding="8dp"
                android:text="@string/text_notes"
                android:maxLines="10"
                android:textColor="#ECCAC5"/>
        <TextView
                android:id="@+id/text_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="normal|italic"
                android:padding="8dp"
                android:text="@string/date"
                android:maxLines="1"
                android:textColor="#8D6E63"
                android:ellipsize="marquee"
                android:background="@color/white"
                android:marqueeRepeatLimit="marquee_forever"
        />
    </LinearLayout>
</androidx.cardview.widget.CardView>