<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainText"
            android:id="@+id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/rec_home"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.225"
            app:layout_constraintHorizontal_bias="0.871" android:layout_alignParentStart="true"
            android:layout_marginStart="146dp" android:layout_alignParentTop="true" android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"/>
    <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            app:queryHint="@string/enter_text"
            app:iconifiedByDefault="false"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/open_search_view_home"
            android:background="#EFE7E7"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="31dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp"
            android:layout_marginStart="36dp"
            android:layout_centerHorizontal="true"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_home"
            android:layout_alignTop="@+id/open_search_view_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="123dp"
            android:layout_marginStart="1dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/bottom_sheet_behavior"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.976"
            app:layout_constraintTop_toBottomOf="@+id/rec_home"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="42dp"/>
    <Button
            android:id="@+id/mainButton"
            android:text="@string/mainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_marginStart="19dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="48dp" android:layout_toStartOf="@+id/plusButton"
            android:layout_marginEnd="124dp"/>

</RelativeLayout>